--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://pranavprabhakar.github.io'
 languageCode = 'en-us'
 title = 'Blog'
 theme = 'console'
